Name: WAVE
Version: 0.1
License: BSD3
License-File: COPYING
Author: Bart Massey <bart@cs.pdx.edu>
Copyright: Copyright (C) 2007 Bart Massey
Maintainer: Bart Massey <bart@cs.pdx.edu>
Homepage: http://wiki.cs.pdx.edu/bartforge/wave
Category: Data
Build-Depends: base
Synopsis: WAVE audio file I/O library
Exposed-Modules: WAVE
Stability: Alpha
